<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actualizar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".view.ActualizarPizzaActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/idPizza_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:hint="@string/id_de_pizza"
            android:theme="@style/EditTextColor"/>

        <Button
            android:id="@+id/btnConsultar_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_weight="0.1"
            android:onClick="onClick"
            android:text="@string/btnConsultar_text"
            android:theme="@style/RaisedButtonDark"/>

    </LinearLayout>

    <EditText
        android:id="@+id/consulta_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextColor"/>

    <EditText
        android:id="@+id/consulta_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextColor"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/previewImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"
            android:background="@drawable/nopreview"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_imagen"
            android:theme="@style/RaisedButtonDark"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnActualizar"
            android:id="@+id/btnActualizar_action"
            android:onClick="onClick"
            android:theme="@style/RaisedButtonDark"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btnEliminar"
            android:id="@+id/btnEliminar_action"
            android:onClick="onClick"
            android:theme="@style/RaisedButtonDark"/>
    </LinearLayout>

</LinearLayout>