<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pictureCardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginVertical="@dimen/margin_login_button"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@color/background_textcard">

            <TextView
                android:id="@+id/pizzaNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pizza_nombre"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textSize_card"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desde_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/desde_textsize"/>
                <TextView
                    android:id="@+id/precioCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/precionumber_textsize"
                    android:layout_marginLeft="@dimen/preciocard_marginleft"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/monedaCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moneda_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/precio_textsize"
                    android:layout_marginLeft="@dimen/preciocard_marginleft"/>
            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.cardview.widget.CardView>