<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".view.RegistrarPizzaActivity">
    <!---->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_horizontal_login"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColor"
                android:layout_marginTop="@dimen/editText_margin_createAccount">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre_de_pizza"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextColor"
                android:layout_marginTop="@dimen/editText_margin_createAccount">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/precio"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/previewImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:background="@drawable/nopreview"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_imagen"
                android:theme="@style/RaisedButtonDark"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/newPizza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_login_button"
                android:text="@string/agregar_pizza"
                android:theme="@style/RaisedButtonDark"
                android:onClick="onClick"/>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>