<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_login_logo"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:background="@drawable/logo" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_login_form">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextColor">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_hint_username"
                        android:textSize="@dimen/textsize_donthaveaccount"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:boxCornerRadiusBottomEnd="@dimen/cornerradius_login"
                    app:boxCornerRadiusTopEnd="@dimen/cornerradius_login"
                    app:boxCornerRadiusTopStart="@dimen/cornerradius_login"
                    app:boxCornerRadiusBottomStart="@dimen/cornerradius_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextColor">
                    <com.google.android.material.textfield.TextInputEditText
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_hint_password"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_buttonText"
                    android:theme="@style/RaisedButtonDark"
                    android:layout_marginVertical="@dimen/margin_login_button"
                    android:onClick="goContainer"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/dontHaveAccount"
                        android:onClick="goCreateAccount"
                        android:text="@string/create_here"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>